{
  "version": 4,
  "terraform_version": "0.14.6",
  "serial": 9,
  "lineage": "04284170-737b-a026-0300-a936f6d34f47",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-http",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2021-02-15T09:54:34.685-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/test-project-ocp/global/firewalls/testcloud-fw-allow-http",
            "log_config": [],
            "name": "testcloud-fw-allow-http",
            "network": "https://www.googleapis.com/compute/v1/projects/test-project-ocp/global/networks/testcloud-vpc",
            "priority": 1000,
            "project": "test-project-ocp",
            "self_link": "https://www.googleapis.com/compute/v1/projects/test-project-ocp/global/firewalls/testcloud-fw-allow-http",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "http"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-https",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "443"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2021-02-15T09:54:34.832-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/test-project-ocp/global/firewalls/testcloud-fw-allow-https",
            "log_config": [],
            "name": "testcloud-fw-allow-https",
            "network": "https://www.googleapis.com/compute/v1/projects/test-project-ocp/global/networks/testcloud-vpc",
            "priority": 1000,
            "project": "test-project-ocp",
            "self_link": "https://www.googleapis.com/compute/v1/projects/test-project-ocp/global/firewalls/testcloud-fw-allow-https",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "https"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-rdp",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "3389"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2021-02-15T09:54:34.824-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/test-project-ocp/global/firewalls/testcloud-fw-allow-rdp",
            "log_config": [],
            "name": "testcloud-fw-allow-rdp",
            "network": "https://www.googleapis.com/compute/v1/projects/test-project-ocp/global/networks/testcloud-vpc",
            "priority": 1000,
            "project": "test-project-ocp",
            "self_link": "https://www.googleapis.com/compute/v1/projects/test-project-ocp/global/firewalls/testcloud-fw-allow-rdp",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "rdp"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2021-02-15T09:54:34.823-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/test-project-ocp/global/firewalls/testcloud-fw-allow-ssh",
            "log_config": [],
            "name": "testcloud-fw-allow-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/test-project-ocp/global/networks/testcloud-vpc",
            "priority": 1000,
            "project": "test-project-ocp",
            "self_link": "https://www.googleapis.com/compute/v1/projects/test-project-ocp/global/firewalls/testcloud-fw-allow-ssh",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "ssh"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "vm_instance_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-1804-bionic-v20210211",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/test-project-ocp/zones/us-central1-a/disks/testcloud-vm-58d42231"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Haswell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "hostname": "testcloudvm-58d42231.testcloud.com",
            "id": "projects/test-project-ocp/zones/us-central1-a/instances/testcloud-vm-58d42231",
            "instance_id": "8114128205361122185",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "f1-micro",
            "metadata_fingerprint": "QhxrT_BSNpM=",
            "metadata_startup_script": "sudo apt-get update; sudo apt-get install -yq build-essential apache2",
            "name": "testcloud-vm-58d42231",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.70.69.230",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/test-project-ocp/global/networks/testcloud-vpc",
                "network_ip": "10.10.1.2",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/test-project-ocp/regions/us-central1/subnetworks/testcloud-public-subnet-1",
                "subnetwork_project": "test-project-ocp"
              }
            ],
            "project": "test-project-ocp",
            "scheduling": [
              {
                "automatic_restart": true,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/test-project-ocp/zones/us-central1-a/instances/testcloud-vm-58d42231",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "http",
              "ssh"
            ],
            "tags_fingerprint": "7XLBdwIeS7E=",
            "zone": "us-central1-a"
          },
          "dependencies": [
            "google_compute_network.vpc",
            "google_compute_subnetwork.public_subnet_1",
            "random_id.instance_id"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "id": "projects/test-project-ocp/global/networks/testcloud-vpc",
            "mtu": 0,
            "name": "testcloud-vpc",
            "project": "test-project-ocp",
            "routing_mode": "GLOBAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/test-project-ocp/global/networks/testcloud-vpc"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "public_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2021-02-15T09:54:35.109-08:00",
            "gateway_address": "10.10.1.1",
            "id": "projects/test-project-ocp/regions/us-central1/subnetworks/testcloud-public-subnet-1",
            "ip_cidr_range": "10.10.1.0/24",
            "name": "testcloud-public-subnet-1",
            "network": "https://www.googleapis.com/compute/v1/projects/test-project-ocp/global/networks/testcloud-vpc",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "test-project-ocp",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/test-project-ocp/regions/us-central1/subnetworks/testcloud-public-subnet-1"
          },
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    }
  ]
}